--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <script async src="https://arc.io/widget.min.js#ZaJNZxxE"></script>
         <script data-ad-client="ca-pub-2998914403804541" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <script src="/ads-prebid.js"></script>
-        <link rel="stylesheet" href="/style.css" defer>
+        <link rel="stylesheet" href="style.css" defer>
         <title>AJbot</title>
     </head>
 
     <body>
-        <script type="text/javascript" src="/main.js" defer></script>
+        <script type="text/javascript" src="main.js" defer></script>
         <header>
             <ul class="nav">
                 <li class="lienMenu"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
