--- a/contact.html
+++ b/contact.html
@@ -43,14 +43,8 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="/main.js">
-    </script><script type="text/javascript">
-        let lang = navigator.language;
+    <script type="text/javascript" src="main.js">
 
-        if (lang.toLowerCase().includes("fr")) {
-            location.href = location.origin + "/fr/contact";
-        }
-    </script>
     <header>
         <ul class="nav">
             <li class="lienMenu"><a href="https://ajbot.xyz"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
