--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
         gtag('config', 'UA-197098967-1');
     </script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>AJbot</title>
 </head>
 
