--- a/policyFR.html
+++ b/policyFR.html
@@ -21,8 +21,8 @@
         href="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/policy.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="policy.css">
+    <link rel="stylesheet" href="style.css">
     <script type="text/javascript">
         window._mNHandle = window._mNHandle || {};
         window._mNHandle.queue = window._mNHandle.queue || [];
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <header>
         <ul class="nav">
             <li class="lienMenu"><a href="https://ajbot.xyz"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Accueil</a></li>
